2004-09-29  Andrew Cagney  <cagney@gnu.org>

	* inftarg.c (inftarg_set_find_memory_regions) 
	(inftarg_set_make_corefile_notes): Delete functions.
	(_initialize_linux_nat): Inline calls.

	* target.h (child_ops): Declare.
	* inftarg.c (child_ops): Move from here ...
	* target.c (child_ops): ... to here.
	* wince.c (child_ops): Delete extern declaration.
	* win32-nat.c (child_ops): Delete extern declaration.
	* linux-nat.c (child_ops): Delete extern declaration.
	* hpux-thread.c (child_ops): Delete extern declaration.

2004-09-28  Mark Kettenis  <kettenis@gnu.org>

	* configure.tgt: Set default OS/ABI for OpenBSD ELF targets.

2004-09-28  Mark Kettenis  <kettenis@gnu.org>

	* configure.in: Only set host_makefile_frag when building a native
	debugger.
	* configure: Regenerate.

	* alphanbsd-tdep.c (_initialize_alphanbsd_tdep): Register OS/ABI
	for OpenBSD ELF.

2004-09-28  Andrew Cagney  <cagney@gnu.org>

	Problem identified by Paul Hilfinger.
	* Makefile.in (ada_lex_c): Define.
	(ada-lex.o): Delete rule.

	* linux-proc.c: Delete file.
	* Makefile.in: Update.
	* config/sparc/linux64.mh (NATDEPFILES): 
	* config/sparc/linux.mh (NATDEPFILES): Update.
	* config/s390/s390.mh (NATDEPFILES): Update.
	* config/powerpc/ppc64-linux.mh (NATDEPFILES): Update.
	* config/powerpc/linux.mh (NATDEPFILES): Update.
	* config/pa/linux.mh (NATDEPFILES): Update.
	* config/mips/linux.mh (NATDEPFILES): Update.
	* config/m68k/linux.mh (NATDEPFILES): Update.
	* config/ia64/linux.mh (NATDEPFILES): Update.
	* config/i386/linux64.mh (NATDEPFILES): Update.
	* config/i386/linux.mh (NATDEPFILES): Update.
	* config/arm/linux.mh (NATDEPFILES): Update.
	* config/alpha/alpha-linux.mh (NATDEPFILES): Update.
	* linux-nat.c: Update copyright.  Include <sys/param.h>,
	<sys/procfs.h>, "elf-bfd.h", "gregset.h", <ctype.h>,
	"gdbthread.h", "gdb_stat.h", <fcntl.h>.
	(O_LARGEFILE): Possibly define.
	(_initialize_linux_nat, linux_proc_pending_signals)
	(add_line_to_sigset, linux_proc_xfer_memory)