@@ -1,5 +1,8 @@
 2004-09-29  Andrew Cagney  <cagney@gnu.org>
 
+	* wince.c (child_ops): Delete.
+	* win32-nat.c (child_ops): Delete.
+
 	* inftarg.c (inftarg_set_find_memory_regions) 
 	(inftarg_set_make_corefile_notes): Delete functions.
 	(_initialize_linux_nat): Inline calls.
